# rsshell

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.config/: nextest.toml
.github/workflows/: docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  features.md  getting-started.md  installation.md  introduction.md  platform-limitations.md
src/: commands.rs  helpers.rs  main.rs
tests/: test_commands.rs  test_helpers.rs  test_main.rs
