[package]
name = "rsshell"
version = "0.1.1"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
rustyline = { version = "15", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process", "fs", "hostname"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
